--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,20 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.server
-    container_name: python_server
+    container_name: python_grpc_server
     ports:
       - "50051:50051"
+
 
   python_client:
     build:
       context: .
       dockerfile: Dockerfile.client
-    container_name: python_client
+    container_name: python_grpc_client
     depends_on:
       - python_server
     environment:
       - GRPC_SERVER_HOST=python_server
+
+    # Delay startup until the server is ready
+    entrypoint: ["sh", "-c", "sleep 20 && python python_client.py"]
